--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.3
+  http: ^0.13.3
+  #get_it: ^7.1.4
+  #async: ^2.7.0
 
 dev_dependencies:
   flutter_test:
